--- a/index.html
+++ b/index.html
@@ -1,4 +1,66 @@
-<!DOCTYPE html>
+<!DOCTYPE html><!DOCTYPE html>
+<html>
+<head>
+  <title>Medireach Medical Clinic</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      text-align: center;
+      padding: 50px;
+      background-color: #f9f9f9;
+      color: #333;
+    }
+    h1 {
+      color: #2c3e50;
+      margin-bottom: 10px;
+    }
+    h2 {
+      color: #2980b9;
+      margin-top: 5px;
+    }
+    p {
+      font-size: 18px;
+      margin: 5px 0;
+    }
+    .button {
+      display: inline-block;
+      margin-top: 20px;
+      padding: 12px 25px;
+      background-color: #2980b9;
+      color: white;
+      border-radius: 5px;
+      text-decoration: none;
+      font-size: 16px;
+      transition: background-color 0.3s;
+    }
+    .button:hover {
+      background-color: #1f5c8a;
+    }
+    .contact-info {
+      margin-top: 30px;
+      font-size: 16px;
+      line-height: 1.6;
+    }
+  </style>
+</head>
+<body>
+  <h1>Medireach Medical Clinic</h1>
+  <h2>“Bringing Quality Healthcare Closer to You – Anytime, Anywhere.”</h2>
+  
+  <p>Visit us at:</p>
+  <p>Chogoria, By Grace Building (Gwa Gichimbo) <br>Next to National Oil, Room 11, First Floor</p>
+  
+  <p>For services, consultations, and more, chat with our clinic assistant:</p>
+  <a class="button" href="https://wa.me/254732213597" target="_blank">Chat with Our Clinic</a>
+  
+  <div class="contact-info">
+    <p>Tel: 0702294517</p>
+    <p>Email: medireachmedicalclinic@gmail.com</p>
+    <p>Follow us on social media: @medireachmedicalclinic</p>
+  </div>
+</body>
+</html>
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
